PostGIS 3.3.5dev
YYYY/MM/DD

* Bug Fixes and Enhancements *
 - #5442, [postgis_tiger_geocoder,postgis_topology]
          Database search_path does not do
          what it intends to do (Jelte Fennema)
 - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
          (Sandro Santilli)

PostGIS 3.3.4
2023/07/28

* Bug Fixes and Enhancements *
  - #5450, Fix macro expansion recursion on powerpc architectures.
           (Bas Couwenberg)
  - #5395, [postgis_topology] Allow unprivileged user dump
           of database with topology enabled
  - #5394, [postgis_topology] Improve robustness of finding
           distinct vertices in topology edges (Sandro Santilli)
  - #5403, [postgis_topology] Fix ValidateTopology(bbox) without
           topology in search_path (Sandro Santilli)
  - #5410, [postgis_raster] ST_Value bilinear resample,
           don't throw an error if Band has no NODATA value
           (Regina Obe)
  - #5385, Postgres malloc assertion fail when
           using pg_cancel_backend with ST_AsMVT
           (Regina Obe, Paul Ramsey)
  - #5452, Updated README.postgis for apt-based systems
           (Jelte Fennema)

* Breaking Changes *
    - #5385, Take out interruptability of ST_AsMVT
             as it causes backend crash under intense conditions
            (Regina Obe, Paul Ramsey)

PostGIS 3.3.3
2023/05/29

* Bug Fixes and Enhancements *
  - #5384, Fix crash in ST_AsGML when given id is longer than given prefix
           (Sandro Santilli)
  - #5380, Fix 2.5 upgrades with views using geography based ST_Distance
           (Sandro Santilli)
  - #5303, Don't try removing closed edges endpoint from
           RemoveUnusedPrimitives (Sandro Santilli)
  - #5289, Fix misleading message in RemoveUnusedPrimitives about
           doubly connected edges healing (Sandro Santilli)
  - #5298, Fix CopyTopology exception with hierarchical layers (Sandro Santilli)
  - #5299, Corrections to address_standardizer_data_us lex (Regina Obe)